--- a/list.erb
+++ b/list.erb
@@ -15,7 +15,7 @@
 	<h1>蔵書管理</h1>
 	<h2>蔵書データの表示</h2>
 	<p>処理する蔵書データを選択してください。｜
-		<a href="entry.erb">蔵書データの表示</a>|
+		<a href="entry.erb">蔵書データの登録</a>|
 		<a href="retrieve.erb">蔵書データの検索</a>|
 		<a href="index.html">メニュー画面に戻る</a>
 		<hr>
@@ -42,6 +42,7 @@
 			</table>
 			<input type ="submit" value="選択した処理を実行" />
 			<hr>
+		</form>
 </body>
 </html>
 
