--- a/entried.erb
+++ b/entried.erb
@@ -1,4 +1,4 @@
-<% #-*- conding: utf-8 -*- %>
+
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -7,21 +7,10 @@
 </head>
 <body>
 	<h1>蔵書管理</h1>
-	<h2>蔵書データの登録</h2>
-	<p>下記の蔵書データを登録しました。|
-		<a href="list.erb">蔵書データの表示</a>|
-		<a href="index.html">メニュー画面に戻る</a></p>
-		<hr>
-
-<table>
-	<th>項目名</th><th>登録データ</th>
-<% ['id','title','author','page','publish_date'].each do |name| %>
-	<tr>
-		<td><%= name %></td>
-		<td><%= req.query[name] %></td>
-	</tr>
-	<% end %>
-</table>
-<hr>
+	<h2>蔵書の登録</h2>
+	<p>情報を登録しました。|</p>
+	<a href="list.erb">蔵書データの表示</a>|
+	<a href="index.html">メニュー画面に戻る</a>
+	<hr>
 </body>
 </html>
